name:                abconv
version:             1.0
synopsis:            Better understanding of BSON to JSON to ADT conversions
description:         Worked out code for going directly from a BSON Document to a Haskell ADT that instances To/FromJSON
license:             ISC
license-file:        LICENSE
author:              Dino Morelli
maintainer:          dino@ui3.info
copyright:           2015-2020 Dino Morelli
category:            Study
build-type:          Simple
cabal-version:       >=1.10

executable abconv
  main-is:             main.hs
  build-depends:       aeson
                     , aeson-bson
                     , base >=4.8 && <5
                     , bson
                     , bytestring
                     , text
  hs-source-dirs:      src
  ghc-options:       -Wall
  default-language:    Haskell2010
